Prevent repo labels from wrapping.

--- a/app/client/repo-list/repo-list.css
+++ b/app/client/repo-list/repo-list.css
@@ -24,6 +24,10 @@
   margin-right: 0;
 }
 
+.repo-list .label {
+  white-space: nowrap;
+}
+
 /* Skew */
 .repo-list .repo-item:nth-child(1),
 .repo-list .repo-item:nth-child(2) {
